--- a/estilos.css
+++ b/estilos.css
@@ -82,6 +82,12 @@ body {
     margin-right: 50px;
 }
 
+.Biotecnologia{
+    background: white;
+    color: rgb(0, 255, 221);
+    opacity: 0.8;
+}
+
 .Industrial{
     background: white;
     color: black;
