--- a/estilos.css
+++ b/estilos.css
@@ -83,7 +83,7 @@ body {
 }
 
 .Biotecnologia{
-    background: white;
+    background: rgb(4, 0, 255);
     color: rgb(0, 0, 0);
     opacity: 0.8;
 }
